--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,27 @@
 {
     "version": "0.2.0",
     "configurations": [
+
+    {
+        "name": ".NET Core Launch (web)",
+        "type": "coreclr",
+        "request": "launch",
+        "preLaunchTask": "build",
+        "program": "${workspaceFolder}/WebApps/HelloMVC/bin/Debug/net6.0/HelloMVC.dll",
+        "args": [],
+        "cwd": "${workspaceFolder}/WebApps/HelloMVC",
+        "stopAtEntry": false,
+        "serverReadyAction": {
+            "action": "openExternally",
+            "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        },
+        "env": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        },
+        "sourceFileMap": {
+            "/Views": "${workspaceFolder}/WebApps/HelloMVC"
+        }
+    },
         {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
