--- a/WebApps/HelloMVC/Properties/launchSettings.json
+++ b/WebApps/HelloMVC/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7195;http://localhost:5131",
+      "applicationUrl": "http://localhost:7195;http://localhost:5131",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
